try to fix broken css

--- a/style/style.css
+++ b/style/style.css
@@ -66,7 +66,7 @@ body {
     display: flex;
     align-items: center;
     text-align: center;
-    background: url("./assets/hero-bg.png"), rgba(0, 25, 49, 0.8);
+    background: url("../assets/hero-bg.png"), rgba(0, 25, 49, 0.8);
     background-size: cover;
     background-position: center;
     width: 100%;
